--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .navbar {
   display: flex;
   justify-content: space-around;
@@ -7,6 +8,7 @@
   z-index: 1000;
   top: 0%;
   color: #ffffff!important;
+ left: 0%;
   
  
 }
